--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -60,7 +60,7 @@ body {
 
 button {
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: #007bff5d;
     /* Bootstrap primary color */
     color: white;
     border: none;
@@ -92,6 +92,42 @@ input {
 
 input:focus {
     border-color: #007BFF;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.349);
     outline: none;
+}
+
+#alert-text-modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* Prevent scrolling on the entire map */
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#alert-text-modal-content {
+    margin: 10% auto; /* Adjust top margin to position higher */
+    padding: 20px;
+    width: 60%; /* Adjust width as needed */
+    border: 1px solid #888;
+    border-radius: 10px;
+    height: 60%; /* Adjust height as needed */
+    overflow-y: auto; /* Add scroll if content overflows */
+}
+
+#close-modal {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#close-modal:hover,
+#close-modal:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
