--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -44,7 +44,6 @@ body {
     100% { transform: rotate(360deg); }
 }
 
-
 .taskbar {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.8);
@@ -62,35 +61,39 @@ body {
     height: 80%;
     background-color: rgba(0, 0, 0, 0.8);
     display: flex;
-    /* Changed from 'display: none' to 'display: flex' */
     flex-direction: column;
-    /* Added this line to stack items vertically */
     justify-content: center;
     align-items: center;
     z-index: 1001;
 }
 
-#settings-panel>div {
-    padding: 20px;
+#settings-panel > div {
+    padding: 10px; /* Reduced padding */
     border-radius: 20px;
-    /* More rounded corners */
+}
+
+#settings-panel h2, #settings-panel h3 {
+    margin: 5px 0; /* Reduced margin */
+}
+
+#settings-panel label {
+    margin: 5px 0; /* Reduced margin */
 }
 
 button {
     padding: 10px 20px;
     background-color: #007bff5d;
-    /* Bootstrap primary color */
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease;
+    margin: 5px 0; /* Reduced margin */
 }
 
 button:hover {
     background-color: #0056b3;
-    /* Darker shade of the primary color */
 }
 
 button:focus {
@@ -99,13 +102,13 @@ button:focus {
 }
 
 input {
-    padding: 10px;
+    padding: 5px; /* Reduced padding */
     border: 1px solid #ccc;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 14px; /* Reduced font size */
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
-    margin-right: 10px;
-    /* Add some space to the right of the input */
+    margin-right: 5px; /* Reduced margin */
+    margin: 5px 0; /* Reduced margin */
 }
 
 input:focus {
@@ -148,4 +151,19 @@ input:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Style the custom attribution control */
+.leaflet-control-attribution {
+    background: rgba(255, 255, 255, 0.7); /* Semi-transparent background */
+    padding: 5px;
+    font-size: 12px;
+    border-radius: 5px;
+}
+
+@media (max-width: 600px) {
+    .leaflet-control-attribution {
+        font-size: 10px; /* Smaller font size on mobile */
+        padding: 3px;
+    }
 }
