--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -6,6 +6,7 @@ body {
     font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
     background-color: black;
     color: white;
+    touch-action: pan-x pan-y;
 }
 
 #map {
